<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textDirection="locale"/>

    <talex.zsw.baselibrary.view.DiscreteSeekBar.DiscreteSeekBar
        android:id="@+id/discrete1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dsb_max="5"
        app:dsb_min="-5"
        app:dsb_value="-2"/>

    <talex.zsw.baselibrary.view.DiscreteSeekBar.DiscreteSeekBar
        android:id="@+id/discrete2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dsb_allowTrackClickToDrag="false"
        app:dsb_indicatorColor="@color/my_floater_color"
        app:dsb_indicatorFormatter="\\o/ %d"
        app:dsb_indicatorTextAppearance="@style/CustomFloaterTextAppearance"
        app:dsb_progressColor="@color/my_progress_color"
        app:dsb_rippleColor="#FF7788FF"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"/>

            <talex.zsw.baselibrary.view.DiscreteSeekBar.DiscreteSeekBar
                android:id="@+id/discrete3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dsb_indicatorFormatter="%04d"
                app:dsb_max="1000"
                app:dsb_min="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum_2"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
